// Copyright 2023 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package policy_validation;

option go_package = "github.com/openconfig/lemming/bgp/tests/proto/policyval";

// Defines a set of tests to be run against the specified policy.
message PolicyTestCase {
  string description = 1;
  repeated RouteTestCase route_tests = 4;
  repeated RouteTestCase alternate_path_route_tests = 5;
  repeated RouteTestCase longer_path_route_tests = 6;
}

// This message represents a single prefix and its associated BGP attributes.
message TestRoute {
  string reach_prefix = 1;
}

// The expected result for a RouteTestCase
enum RouteTestResult {
  ROUTE_TEST_RESULT_UNSPECIFIED = 0;
  // Accept the input TestRoute.
  ROUTE_TEST_RESULT_ACCEPT = 1;
  // Discard the input TestRoute.
  ROUTE_TEST_RESULT_DISCARD = 2;
  // Input TestRoute not selected by best path selection.
  ROUTE_TEST_RESULT_NOT_PREFERRED = 3;
}

// Specifies an input route and expected output.
//
// If the RouteTestResult is ACCEPT then the input route should be accepted.
//
// If the RouteTestResult is DISCARD then the input route should be Discarded by
// the policy engine.
message RouteTestCase {
  string description = 1;
  TestRoute input = 2;
  RouteTestResult expected_result = 3;
}
